; ModuleID = '/home/carl/AnghaBench/openssl/ssl/extr_ssl_cert.c_ssl_cert_lookup_by_pkey.c'
source_filename = "/home/carl/AnghaBench/openssl/ssl/extr_ssl_cert.c_ssl_cert_lookup_by_pkey.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@NID_undef = common dso_local global i32 0, align 4
@ssl_cert_info = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @ssl_cert_lookup_by_pkey(i32* %0, i64* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i64*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  store i32* %0, i32** %4, align 8
  store i64* %1, i64** %5, align 8
  %8 = load i32*, i32** %4, align 8
  %9 = call i32 @EVP_PKEY_id(i32* %8)
  store i32 %9, i32* %6, align 4
  %10 = load i32, i32* %6, align 4
  %11 = load i32, i32* @NID_undef, align 4
  %12 = icmp eq i32 %10, %11
  br i1 %12, label %13, label %14

13:                                               ; preds = %2
  store i32* null, i32** %3, align 8
  br label %29

14:                                               ; preds = %2
  %15 = load i32, i32* %6, align 4
  %16 = call i32 @ssl_cert_lookup_by_nid(i32 %15, i64* %7)
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %19, label %18

18:                                               ; preds = %14
  store i32* null, i32** %3, align 8
  br label %29

19:                                               ; preds = %14
  %20 = load i64*, i64** %5, align 8
  %21 = icmp ne i64* %20, null
  br i1 %21, label %22, label %25

22:                                               ; preds = %19
  %23 = load i64, i64* %7, align 8
  %24 = load i64*, i64** %5, align 8
  store i64 %23, i64* %24, align 8
  br label %25

25:                                               ; preds = %22, %19
  %26 = load i32*, i32** @ssl_cert_info, align 8
  %27 = load i64, i64* %7, align 8
  %28 = getelementptr inbounds i32, i32* %26, i64 %27
  store i32* %28, i32** %3, align 8
  br label %29

29:                                               ; preds = %25, %18, %13
  %30 = load i32*, i32** %3, align 8
  ret i32* %30
}

declare dso_local i32 @EVP_PKEY_id(i32*) #1

declare dso_local i32 @ssl_cert_lookup_by_nid(i32, i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
